# simple_multistep_model

./: .gitignore  MLproject  README.md  _redirects  eval_config.yaml  evaluate_one_step.py  index.html  model  predict.py  pyproject.toml  slides.md  test_this.py  train.py  training_data.csv  transformations.py
assets/: Mermaid.vue_vue_type_script_setup_true_lang-yw6daGjK.js  architectureDiagram-TNQZZMJV-BT6FzwIC.js  blockDiagram-S6MWFEA5-s7_PWBTs.js  c4Diagram-HJPYDYFQ-BHPKSZYH.js  chunk-5TILSNIZ-BHzshvgY.js  chunk-6D62FQYQ-B2Gi_u2x.js  chunk-BYQDXZHU-BBcbpl__.js  chunk-C4E7R7RU-Cmztzw7l.js  chunk-EQZSQK5Y-7KpjMn3m.js  chunk-FE7ZF5LU-B6EVNjdL.js  chunk-JZCHAHSZ-CFTLJrQb.js  chunk-KNJ7V65Z-C0iGMu3Z.js  chunk-MDI5NGGP-BxmxIIve.js  chunk-MFRUYFWM-DusvoHr5.js  chunk-SXA26SXQ-l1ZW-1DT.js  chunk-WASTHULE-DUWOFK5s.js  classDiagram-v2-LC6UEX7N-DeCHB5HA.js  cose-bilkent-56X6VQ7T-BuCoQjab.js  dagre-QRXUHWQO-C7OXSyrK.js  diagram-AGP3Q2RM-BgGFEC2n.js  diagram-O4BAC7QP-BihMEFu_.js  diagram-PCFP6W76-BvoKaJE_.js  erDiagram-CM3TBJOQ-BmFBJShY.js  flowDiagram-3GXLPMNX-CAKuirVr.js  ganttDiagram-SUIKSRIT-D9OmLJ78.js  gitGraphDiagram-M6HVH7IN-DR1NLa0b.js  index-Cn79ic0N.js  index-_plknyjt.css  infoDiagram-7YXITYZE-BUwt8ESQ.js  journeyDiagram-MKBZLIW2-chBP-C3N.js  kanban-definition-TWLB4AJC-Bx4hrXCz.js  katex-EA2IADCH-BiQWDn6l.js  md-9WctKlWG.js  md-9tpwRy6Q.js  md-BAWU_ccS.js  md-BE7EbjJz.js  md-BTwmqgtR.js  md-C9ZZfoWC.js  md-CHzw6Czw.js  md-Cclp7e9E.js  (+22 more)
example/: transformations.py
simple_multistep_model/: __init__.py  bucket_calculator.py  cli.py  config.py  example.py  multistep.py  (+2 more)
(+45 files in other folders)
